# qf

./: .gitignore  AGENTS.md  ANALYSIS_REPORT.md  PLAN.md  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
docs/: index.md  research-report.md
src/pry/: __init__.py
src/pry/common/: config.py  constants.py  logging.py  models.py
