[project]
name = "pry"
version = "0.0.1"
description = "A Windows file search tool with background indexing and a terminal UI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.80",
    "pywin32>=306; sys_platform == 'win32'",
    "httpx>=0.27",
]

[project.scripts]
pri = "pry.tui.app:main"
pry = "pry.service.lifecycle:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pry"]
